--- a/template.tex
+++ b/template.tex
@@ -31,6 +31,7 @@
 % Check out CTAN to see: http://www.ctan.org/
 %%
 \usepackage{flipbook}
+\usepackage{pdfpages}
 \usepackage{pgf}
 \usepackage{graphicx,latexsym}
 \usepackage{lastpage}
